Edit auth and vendors and restaurant except last two